--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body class="light-mode">
         <header>
+        <button id="mode">Dark</button>
         <h1>Metric/Imperial Unit Conversion</h1>
         <div class="button-container">
             <input type="text" id="num-input">
-            <button>Convert</button>
+            <button id="convert-btn">Convert</button>
         </div>
-       
      </header>
 
-        <section>
-            <h3>Length (Meter/Feet)</h3>
-            <p class="length-convert"></p>
+        <section id="metric-container">
+            <div id="length-container" class="unit-dark">
+                <h3>Length (Meter/Feet)</h3>
+                <p id="length-convert"><!--20 meters = 65.616 feet | 20 feet = 6.096 meters--></p> 
+            </div>
         </section>
-        <section>
-            <h3>Volume (Liters/Gallons)</h3>
-            <p class="volume-convert"></p>
+        <section id="metric-container">
+            <div id="volume-container" class="unit-dark">
+                <h3>Volume (Liters/Gallons)</h3>
+                <p id="volume-convert"><!--20 liters = 5.284 gallons | 20 gallons = 75.708 liters--></p>
+            </div>
         </section>
-        <section>
-            <h3>Mass (Kilograms/Pounds)</h3>
-            <p class="mass-convert"></p>
+        <section id="metric-container">
+            <div id="mass-container" class="unit-dark">
+                <h3>Mass (Kilograms/Pounds)</h3>
+                <p id="mass-convert"><!--20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos--></p>
+            </div>
         </section>
         <script src="index.js"></script>
     </body>
